--- a/app/views/forms/housing/CBLadd-person1-loop.html
+++ b/app/views/forms/housing/CBLadd-person1-loop.html
@@ -153,6 +153,34 @@
         classes: "govuk-input--width-20"
       }) }}
 
+      <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible erc">
+
+      {{ govukRadios({
+        idPrefix: "add-person2",
+        name: "add-person2",
+        classes: "govuk-radios--inline",
+        fieldset: {
+          legend: {
+            text: "Do you need to add another person?",
+            isPageHeading: true,
+            classes: "govuk-fieldset__legend--m"
+          }
+        },
+        items: [
+          {
+            value: "yes",
+            text: "Yes",
+            checked: checked ("add-person2", "yes")
+          },
+          {
+            value: "no",
+            text: "No",
+            checked: checked ("add-person2", "no")
+          }
+        ]
+      }) }}
+
+
       {% from "button/macro.njk" import govukButton %}
       <br>
       {{ govukButton({
@@ -163,18 +191,17 @@
 
     </div>
 </div>
-<div class="alt-notes-box">
-<p><a href="/forms/housing/CBLadd-person.html">Try an alternative</a></p>
-</div>
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>Validation - name, relation are not empty: <span class="govuk-error-message">Enter first name - Enter last name  - Enter relationship</span></li>
       <li>dob, 3 fields not empty: <span class="govuk-error-message">Enter date of Birth</span> - and if possible is a valid date (not the 31 of April) - <span class="govuk-error-message">Enter valid date</span></li>
+      
       <li>need to pick one Gender, but description if Other is optional - <span class="govuk-error-message">Enter gender</span></li>
       <li>pick yes or no living with you - <span class="govuk-error-message">Confirm if live with you now</span></li>
+      <li>Validation - <span class="govuk-error-message">Confirm if need to add another person</span></li>
       <li>same for all other screen for person 2 etc....</li>
-      <li><strong>we need to be able to enter 10 people</strong> potentially. On the 10th at the bottom, we need an open textbox with label: Tell us about anyone else you didn't add yet (if applicable) <a href="/forms/housing/CBLperson3">to see an example</a></li>
+      <li><strong>we need to be able to enter 10 people</strong> potentially. On the 10th at the bottom, we need an open textbox with label: Tell us about anyone else you didn't add yet (if applicable) <a href="/forms/housing/CBLadd-person3-loop">to see an example</a></li>
     </ul>
 </div>
 
