--- a/app/views/forms/housing/CBLwhat-next.html
+++ b/app/views/forms/housing/CBLwhat-next.html
@@ -18,13 +18,13 @@
 
 
       <h2 class="govuk-heading-m erc-text-blue">What happen next</h2>
-          <p>We will:</p>
-          <ul class="govuk-list govuk-list--bullet">
-            <li>assess your priority for housing within 21 working days of receiving your form if we have all the information needed</li>
-            <li>confirm your Priority Pass and that you have been added to the housing register</li>
-            <li>explain how to bid for available properties</li>
-            <li>invite you to discuss your options and chances of being housed by us</li>
-          </ul>
+      <p>We'll:</p>
+      <ul class="govuk-list govuk-list--bullet">
+          <li>process your application within 21 days of getting all the information we need</li>
+          <li>let you know where you are on the priority list</li>
+          <li>explain how to bid for available homes</li>
+          <li>invite you to discuss your chances of getting a house and your options</li>
+      </ul>
 
       <h2 class="govuk-heading-m govuk-!-margin-top-9">Related information </h2>
       <ul class="govuk-list">
