--- a/app/views/forms/housing/CBLadd-child1-loop.html
+++ b/app/views/forms/housing/CBLadd-child1-loop.html
@@ -137,6 +137,32 @@
         classes: "govuk-input--width-30"
       }) }}
 
+      <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible erc">
+
+      {{ govukRadios({
+        idPrefix: "add-child2",
+        name: "add-child2",
+        fieldset: {
+          legend: {
+            text: "Do you need to add another child?",
+            isPageHeading: true,
+            classes: "govuk-fieldset__legend--m"
+          }
+        },
+        items: [
+          {
+            value: "yes",
+            text: "Yes",
+            checked: checked ("add-child2", "yes")
+          },
+          {
+            value: "no",
+            text: "No",
+            checked: checked ("add-child2", "no")
+          }
+        ]
+      }) }}
+
       {% from "button/macro.njk" import govukButton %}
       <br>
       {{ govukButton({
@@ -147,9 +173,6 @@
 
     </div>
 </div>
-<div class="alt-notes-box">
-<p><a href="/forms/housing/CBLadd-children.html">Try an alternative</a></p>
-</div>
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
@@ -157,8 +180,9 @@
       <li>dob, 3 fields not empty: <span class="govuk-error-message">Enter date of Birth</span> - and if possible is a valid date (not the 31 of April) - <span class="govuk-error-message">Enter valid date</span></li>
       <li>need to pick one Gender, but description if Other is optional - <span class="govuk-error-message">Enter gender</span></li>
       <li>address - <span class="govuk-error-message">Enter address</span></li>
+      <li>Validation - <span class="govuk-error-message">Confirm if need to add another child</span> <span class="UR-tag red">CHANGED</span></li>
       <li>same for all other screens for child 2 etc....</li>
-      <li><strong>we need to be able to enter 5 children</strong> potentially. On the 5th at the bottom, we need an open textbox with label: <a href="/forms/housing/CBLchild2">Tell us about anyone else you didn't add yet (if applicable)</a></li>
+      <li><strong>we need to be able to enter 5 children</strong> potentially. On the 5th at the bottom, we need an open textbox with label: <a href="/forms/housing/CBLadd-child2-loop">Tell us about anyone else you didn't add yet (if applicable)</a></li>
     </ul>
 </div>
 
