--- a/app/views/forms/housing/CBLadd-person3-loop.html
+++ b/app/views/forms/housing/CBLadd-person3-loop.html
@@ -15,37 +15,6 @@
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <p class="govuk-body-l">Enter each person who will be living with you.</p>
       <h2 class="govuk-heading-m">
-          Person 1:
-      </h2>
-      <div style="overflow: auto">
-        <table class=" govuk-table half-width">
-          <tbody class="govuk-table__body">
-            <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Name:</th><td class="govuk-table__cell no-border">{{data['first-name-person1']}}&nbsp;{{data['last-name-person1']}}</td></tr>
-            <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Date of birth:</th><td class="ngovuk-table__cell o-border">{{data['dob-person1-day']}}/{{data['dob-person1-month']}}/{{data['dob-person1-year']}}</td></tr>
-            <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Gender:</th><td class="govuk-table__cell no-border">{% if data['gender1'] === 'Other' %} {{data['gender-desc1']}} {% else %} {{data['gender1']}} {% endif %}</td></tr>
-            <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Living with you now:</th><td class="govuk-table__cell no-border">{{data['live-with1']}}</td></tr>
-            <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Relation to you:</th><td class="govuk-table__cell no-border">{{data['relationship1']}}</td></tr>
-          </tbody>
-        </table>
-      </div>
-  
-      <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible erc">
-      <h2 class="govuk-heading-m">
-          Person 2:
-      </h2>
-      <div style="overflow: auto">
-        <table class=" govuk-table half-width">
-          <tbody class="govuk-table__body">
-            <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Name:</th><td class="govuk-table__cell no-border">{{data['first-name-person2']}}&nbsp;{{data['last-name-person2']}}</td></tr>
-            <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Date of birth:</th><td class="ngovuk-table__cell o-border">{{data['dob-person2-day']}}/{{data['dob-person2-month']}}/{{data['dob-person2-year']}}</td></tr>
-            <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Gender:</th><td class="govuk-table__cell no-border">{% if data['gender2'] === 'Other' %} {{data['gender-desc2']}} {% else %} {{data['gender2']}}{% endif %}</td></tr>
-            <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Living with you now:</th><td class="govuk-table__cell no-border">{{data['live-with2']}}</td></tr>
-            <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Relation to you:</th><td class="govuk-table__cell no-border">{{data['relationship2']}}</td></tr>
-          </tbody>
-        </table>
-        </div>
-        <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible erc">
-      <h2 class="govuk-heading-m">
           Person 3:
       </h2>
       
@@ -184,6 +153,20 @@
         value: data['relationship3'],
         classes: "govuk-input--width-20"
       }) }}
+      <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible erc">
+      
+      <h2 class="govuk-heading-m">
+          Tell us about anyone else you didn't add yet (if applicable)
+      </h2>
+      {{ govukTextarea({
+        name: "more-people-to-add",
+        id: "more-people-to-add",
+        value: data['more-people-to-add'],
+        label: {
+          text: "Name, date of birth, gender, living with you now or not, relationship to you"
+        }
+      }) }}
+
 
       {% from "button/macro.njk" import govukButton %}
       <br>
