--- a/app/views/forms/equal-opportunities/gender.html
+++ b/app/views/forms/equal-opportunities/gender.html
@@ -22,7 +22,7 @@ Gender - Equality and diversity
           value: data['gender-description'],
           classes: "govuk-!-width-two-thirds",
           label: {
-            text: "Describe gender in another way (optional)"
+            text: "Describe gender in another way"
           }
         }) }}
         {% endset -%}
@@ -70,8 +70,8 @@ Gender - Equality and diversity
 
     </div>
 </div>
-<div class="content-notes-box">
+<!--div class="content-notes-box">
     <h3 class="govuk-heading-s">Content notes:</h3>
     <p>Instead of'Other' the Samaritans are using: <strong>Prefer to self-describe</strong> - they also talk about Gender identity</p>
-</div>
+</div-->
 {% endblock %}
