--- a/app/views/forms/equal-opportunities/identity.html
+++ b/app/views/forms/equal-opportunities/identity.html
@@ -9,7 +9,7 @@ Identity - Equality and diversity
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Equality and diversity questionnaire <span class="UR-tag red">NOT ASKED ON PAPER FORM</span>
+            Equality and diversity questionnaire
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
 
@@ -32,7 +32,7 @@ Identity - Equality and diversity
             name: "identity",
             fieldset: {
                 legend: {
-                text: "How do you identify?",
+                text: "Identity",
                 isPageHeading: true,
                 classes: "govuk-fieldset__legend--m"
                 }
@@ -42,8 +42,8 @@ Identity - Equality and diversity
               },
             items: [
                 {
-                value: "scottish",
-                text: "Scottish"
+                value: "British",
+                text: "British"
                 },
                 {
                 value: "English",
@@ -54,12 +54,12 @@ Identity - Equality and diversity
                 text: "Northern Irish"
                 },
                 {
-                value: "Welsh",
-                text: "Welsh"
+                value: "scottish",
+                text: "Scottish"
                 },
                 {
-                value: "British",
-                text: "British"
+                value: "Welsh",
+                text: "Welsh"
                 },
                 {
                 value: "Other",
@@ -87,10 +87,10 @@ Identity - Equality and diversity
 </div>
 <br>
 <br>
-<div class="design-notes-box">
+<!--div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-    <li>initial question was: What do you feel is your national identity?</li>
+    <li>alphabetical order is the most neutral, but would need to be tested</li>
     </ul>
 </div>
 <div class="IT-notes-box">
@@ -99,5 +99,5 @@ Identity - Equality and diversity
     <li>no validation - they can move on even if they don't select anything</li>
     <li>Other open a text box, but can stay empty - no validation</li>
     </ul>
-</div>
+</div-->
 {% endblock %}
