--- a/app/views/forms/equal-opportunities/start1.html
+++ b/app/views/forms/equal-opportunities/start1.html
@@ -14,12 +14,11 @@ Equality and diversity
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
 
         <h2 class="govuk-heading-m">
-                This questionnaire is anonymous and optional
+                This questionnaire is optional
         </h2>
 
-        <p>We are committed to ensuring that you are treated fairly.</p> 
-        <p>By completing this questionnaire, you help us to monitor this.</p> 
-        <p>Any information you provide will be only be used to provide statistics for monitoring purposes.</p>
+        <p>Your answers are anonymous. We’ll only use information you give for statistics.</p> 
+     
     
 
         {{ govukButton({
@@ -33,7 +32,7 @@ Equality and diversity
 </div>
 <br>
 <br>
-<div class="design-notes-box">
+<!--div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
     <li><strong>you would reach that page via a link on the  confirmation page stating: takes less than 1 minute</strong></li>
@@ -46,8 +45,7 @@ Equality and diversity
 </div>
 <div class="content-notes-box">
     <h3 class="govuk-heading-s">Content notes:</h3>
-    <p><strong>not checked by Sharon yet</strong></p>
     <p>example from the Samaritans: <br>
         We are committed to increasing diversity among our volunteers. If you'd like to tell us about your background and identity then we'll use this information to track how we're doing. This is entirely optional and has no effect on your application.</p>
-</div>
+</div-->
 {% endblock %}
