--- a/app/views/forms/equal-opportunities/age.html
+++ b/app/views/forms/equal-opportunities/age.html
@@ -65,7 +65,7 @@ Age - Equality and diversity
       </form>
     </div>
 </div>
-<div class="design-notes-box">
+<!--div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>As this should probably be a form for any situation, I've added 0-15 age group. But if they select this, then we might not want to show the relationship status question and the one about sexual orientation? might just jump to the religion question instead</li>
@@ -76,5 +76,5 @@ Age - Equality and diversity
         <li>no validation but if '0 to 15' is selected then jump two screens ahead and take the user directly to the religion screen</li>
         <li>No validation of the radio buttons</li>
     </ul>
-  </div>
+  </div-->
 {% endblock %}
