add content changes from Sharon

--- a/app/views/forms/equal-opportunities/age.html
+++ b/app/views/forms/equal-opportunities/age.html
@@ -22,7 +22,7 @@ Age - Equality and diversity
           name: "age",
           fieldset: {
             legend: {
-              text: "How old are you?",
+              text: "Age group",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--m"
             }
