--- a/app/views/forms/equal-opportunities/gender.html
+++ b/app/views/forms/equal-opportunities/gender.html
@@ -34,7 +34,7 @@ Gender - Equality and diversity
           name: "gender",
           fieldset: {
             legend: {
-              text: "Which best describes your gender?",
+              text: "Gender?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--m"
             }
