remove highlight in link on menu

--- a/app/views/forms/menu-forms.html
+++ b/app/views/forms/menu-forms.html
@@ -20,7 +20,7 @@
         <li><a href="housing/CBLstart.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">CBL</a><br>version with updated content<br><strong class="govuk-tag info">last update:</strong><strong> 04/01 evening</strong><br>
           See the flow of screens used in UR session of Monday 10/12/18 <a href="{{ asset_path }}/images/CBLflowur1012.pdf" target="_blank">as a PDF</a><br>
           See the flow of screens used in the UR session of the 08-09/01/19 <a href="{{ asset_path }}/images/CBLflowur0801.pdf" target="_blank">as a PDF</a><br>
-          <strong style="background-color:#ffbf47">UR session, <a href="https://erc-prototype-cbl-ur-2.herokuapp.com/forms/housing/CBLstart" target="_blank">link to use</a> username as usual password is the same as username</strong></li><br>
+          <strong>UR session, <a href="https://erc-prototype-cbl-ur-2.herokuapp.com/forms/housing/CBLstart" target="_blank">link to use</a> username as usual password is the same as username</strong></li><br>
         <li><a href="equal-opportunities/start1.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Equality and diversity</a><br>Based on Housing document - reviewed by Sharon now<br> <strong class="govuk-tag info">last update:</strong>  <strong>08/01 evening</strong><br>
         See original paper form at the end of CBL <a href="{{ asset_path }}/images/equality-questionnaire-paper-form.png" target="_blank">as an image</a><br>
         See the flow of screens of a simplified version <a href="{{ asset_path }}/images/equality-diversity-questionnaire-simplified.pdf" target="_blank">as a PDF</a></li><br>
